[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltx-bulk-renderer"
version = "1.0.0"
description = "Production-grade unattended Kaggle batch image-to-video rendering platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Open Source Contributors" }]
dependencies = [
  "Pillow>=10.0.0",
  "PyYAML>=6.0.1",
  "numpy>=1.26.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "imageio>=2.34.0",
  "imageio-ffmpeg>=0.4.9",
  "diffusers>=0.31.0",
  "transformers>=4.44.0",
  "accelerate>=0.33.0",
  "huggingface-hub>=0.24.0",
  "safetensors>=0.4.3",
  "mmgp>=3.2.0",
  "gguf>=0.10.0",
  "google-api-python-client>=2.130.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "psutil>=5.9.8"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cache_system*","config*","core*","diagnostics*","drive*","engine*","jobs*","logging_system*","observability*","orchestration*","preflight*","renderers*","reports*","storage*","stitching*","utils*","validation*"]
